# simple-tencent-sms

./: Cargo.toml  README.MD
src/: lib.rs  region.rs  tencent_sms.rs  utils.rs
tests/: hash_test.rs  test.rs
