[package]
name = "simple-tencent-sms"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["default", "macros"] }
reqwest = { version = "0.12", features = ["default", "blocking", "json", "stream"] }
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
hex = "0.4"
anyhow = "1"