[package]
name = "simple-tencent-sms"
version = "0.1.1"
edition = "2021"
license = "MIT"
description= "两行代码实现腾讯云短信发送"
repository = "https://github.com/BaLaLaLs/simple-tencent-sms"
keywords = ["tencent", "sms", "send"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["default", "macros"] }
reqwest = { version = "0.12", features = ["default", "blocking", "json", "stream"] }
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
hex = "0.4"
anyhow = "1"